[project]
authors = [ { name = "Vasili Gulevich", email = "vasili.gulevich@xored.com" } ]
description = "Tools to automate Spirent iTest development environment"
dependencies = [
	"python-toggl",
	"progress",
	"jira",
	"python-gitlab",
	"requests",
	"python-jenkins"
]
name = "itestdevenv"
version = "0.0.2"

[build-system]
requires = [    "setuptools>=62",     "wheel" ]
build-backend = "setuptools.build_meta"