[metadata]
name = itestdevenv
version = 0.0.1
author = Vasili Gulevich
author_email = vasili.gulevich@xored.com
description = Tools to automate Spirent iTest development environment
#long_description = file: README.md
#long_description_content_type = text/markdown
#url = https://github.com/pypa/sampleproject
#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    =src
packages = itestdevenv
python_requires = >=3.6
install_requires = 
	requests
	python-gitlab
	python-jenkins
	progress	

[options.packages.find]
where = src